fix: disable text selection and tap highlight on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,10 @@
       "Helvetica Neue",
       Arial,
       sans-serif;
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
   }
 }
 
